# youtube-video-transcript-ai-summary

./: .gitignore  README.md  pyproject.toml
src/: args_parse.py  data_type.py  main.py  output_format.py
src/modules/: args_parse.py  output_format.py
